# easy-claw

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  mcp_servers.json  mcp_servers.json.example  pyproject.toml  temp_open_browser.py
.claude/: settings.local.json
.codex/environments/: environment.toml
.superpowers/sdd/: final-review-fix-report.md  task-1-fix-report.md  task-2-fix-report.md
.workbuddy/memory/: 2026-05-02.md
docs/: architecture.md  cli.md  development.md  mvp-first-version-thinking.md  review-2026-05-09.md  skills.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  styles.css  styles.test.ts
scripts/: doctor.ps1  setup-mcp.ps1  start.ps1
src/easy_claw/: cli.py  cli_interactive.py  cli_slash.py  cli_views.py  config.py  defaults.py  skills.py  workspace.py
tests/: test_agent_middleware.py  test_agent_runtime.py  test_agent_toolset.py  test_api.py  test_browser_smoke.py  test_browser_tools.py  test_cli.py  test_command_tools.py  test_config.py  test_document_tools.py  test_mcp_tools.py  test_package.py  test_report_tools.py  test_scripts.py  test_search_tools.py  test_skills.py  test_storage.py  test_workspace.py
tests/agent/: test_approvals.py  test_middleware.py  test_runtime.py  test_skill_tools.py  test_toolset.py
tests/api/: static_web_modules.test.mjs  test_api_app.py  test_react_static_app.py  test_static_web_modules.py  test_web_approval.py
tests/cli/: test_cli_app.py  test_interactive_stream.py
(+127 files in other folders)
