[project]
name = "easy-claw"
version = "0.5.0"
description = "Windows 优先的本地 AI Agent 工作台。"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "ddgs>=5.0.0",
    "tavily-python>=0.5.0",
    "fastapi>=0.115.0",
    "langchain>=1.0.0",
    "langchain-community>=0.4.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "markitdown>=0.1.3",
    "langchain-mcp-adapters>=0.2.0",
    "playwright>=1.50.0",
    "rich>=13.9.0",
    "typer>=0.16.0",
    "uvicorn>=0.34.0",
    "prompt-toolkit>=3.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[project.scripts]
easy-claw = "easy_claw.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/easy_claw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
